<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="101dp"
        android:layout_height="47dp"
        android:text="@string/numinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="108dp"
        android:layout_height="46dp"
        android:text="@string/radio_paros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:text="@string/radio_paratlan"
        app:layout_constraintStart_toEndOf="@+id/radioButton4"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="125dp"
        android:layout_height="47dp"
        android:layout_marginStart="4dp"
        android:text="@string/radio_5el"
        app:layout_constraintStart_toEndOf="@+id/radioButton5"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="112dp"
        android:layout_height="51dp"
        android:text="@string/negyzet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

    <EditText
        android:id="@+id/numberNegyzet"
        android:layout_width="207dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="410dp"
        android:layout_height="54dp"
        android:text="@string/viszgal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberNegyzet" />

</androidx.constraintlayout.widget.ConstraintLayout>